UPDATE (i18n) : Dashboard screen translations

--- a/src/renderer/lang/generic/competition.json
+++ b/src/renderer/lang/generic/competition.json
@@ -1,14 +1,24 @@
 {
     "gb": {
         "competition": {
-            "label": "competition",
-            "plural": "competitions"
+            "label": "Competition",
+            "plural": "Competitions",
+            "status": {
+                "waiting": "Waiting for fighter's list validation",
+                "ongoing": "Ongoing",
+                "finished": "Finished"
+            }
         }
     },
     "fr": {
         "competition": {
-            "label": "compétition",
-            "plural": "compétitions"
+            "label": "Compétition",
+            "plural": "Compétitions",
+            "status": {
+                "waiting": "En attente confirmation des combattants",
+                "ongoing": "En cours",
+                "finished": "Terminée"
+            }
         }
     }
 }
