--- a/src/renderer/lang/screens/software/dashboard.json
+++ b/src/renderer/lang/screens/software/dashboard.json
@@ -2,16 +2,16 @@
     "gb": {
         "dashboard": {
             "competition": {
-                "create": "Create a new @.lower:competition.label",
-                "goto": "Go to the @.lower:competition.label"
+                "create": "Create a new @.lower:common.competition",
+                "goto": "Go to the @.lower:common.competition"
             }
         }
     },
     "fr": {
         "dashboard": {
             "competition": {
-                "create": "Créer une nouvelle @.lower:competition.label",
-                "goto": "Aller sur la @.lower:competition.label"
+                "create": "Créer une nouvelle @.lower:common.competition",
+                "goto": "Aller sur la @.lower:common.competition"
             }
         }
     }
