--- a/src/renderer/lang/generic/common.json
+++ b/src/renderer/lang/generic/common.json
@@ -5,12 +5,16 @@
                 "add": "Add",
                 "back-main": "Back to the main screen",
                 "cancel": "Cancel",
+                "choose": "Choose",
+                "close": "Close",
                 "confirm": "I confirm",
                 "edit": "Edit",
+                "select": "Select",
                 "set": "Set {adjective}",
                 "step-back": "Back to previous step",
                 "step-next": "Next step",
-                "step-previous": "Previous step"
+                "step-previous": "Previous step",
+                "validate": "Validate"
             },
             "form": {
                 "required": "* fields are required"
@@ -19,20 +23,20 @@
                 "label": "of",
                 "list": "List of {item}",
                 "number": "{item} number",
+                "number-inverse": "{item} No{n}",
                 "total": "Total of {item}"
-            },
-            "verb": {
-                "choose": "Choose",
-                "is": "Is"
             },
             "and": "and",
             "club": "Club",
+            "comment": "Comment",
+            "comments": "Comments",
             "competition": "Competition",
             "competitions": "Competitions",
             "competition-formula": "Competition formula",
             "date": "Date",
             "date-birth": "Birthdate",
             "draw-random": "Random draw",
+            "entry": "Entry",
             "fight": "Fight",
             "fights": "Fights",
             "fighter": "Fighter",
@@ -42,11 +46,14 @@
             "name": "Name",
             "organizer": "Organizer",
             "place": "Place",
+            "point": "Point",
+            "points": "Points",
             "pool": "Pool",
             "pools": "Pools",
             "presence": "Présence",
             "readonly": "Readonly",
-            "status": "Statuts",
+            "status": "Status",
+            "substitute": "Substitute",
             "team": "Team",
             "teams": "Teams",
             "team-new": "New team",
@@ -59,12 +66,16 @@
                 "add": "Ajouter",
                 "back-main": "Revenir à l'écran principal",
                 "cancel": "Annuler",
+                "choose": "Choisir",
+                "close": "Fermer",
                 "confirm": "Je confirme",
                 "edit": "Modifier",
+                "select": "Sélectionner",
                 "set": "Rendre {adjective}",
                 "step-back": "Revenir à l'étape précédente",
                 "step-next": "Étape suivante",
-                "step-previous": "Étape précédente"
+                "step-previous": "Étape précédente",
+                "validate": "Valider"
             },
             "form": {
                 "required": "Les champs * sont requis"
@@ -73,20 +84,20 @@
                 "label": "de",
                 "list": "Liste des {item}",
                 "number": "N° de {item}",
+                "number-inverse": "{item} N°{n}",
                 "total": "Total de {item}"
-            },
-            "verb": {
-                "choose": "Choisir",
-                "is": "Est"
             },
             "and": "et",
             "club": "Club",
+            "comment": "Commentaire",
+            "comments": "Commentaires",
             "competition": "Compétition",
             "competitions": "Compétitions",
             "competition-formula": "Formule de compétition",
             "date": "Date",
             "date-birth": "Date de naissance",
             "draw-random": "Tirage au sort",
+            "entry": "Entrée",
             "fight": "Combat",
             "fights": "Combats",
             "fighter": "Combattant",
@@ -96,11 +107,14 @@
             "name": "Nom",
             "organizer": "Organisateur",
             "place": "Lieu",
+            "point": "Point",
+            "points": "Points",
             "pool": "Poule",
             "pools": "Poules",
             "presence": "Présence",
             "readonly": "Lecture seule",
             "status": "Statut",
+            "substitute": "Remplaçant",
             "team": "Équipe",
             "teams": "Équipes",
             "team-new": "Nouvelle équipe",
