--- a/src/renderer/lang/screens/partials/list/pool-draw.json
+++ b/src/renderer/lang/screens/partials/list/pool-draw.json
@@ -1,6 +1,6 @@
 {
     "gb": {
-        "list-draw": {
+        "pool-list-draw": {
             "status": {
                 "finished": "@:common.draw-random finished!",
                 "ongoing": "@:common.draw-random in progress..."
@@ -9,7 +9,7 @@
         }
     },
     "fr": {
-        "list-draw": {
+        "pool-list-draw": {
             "status": {
                 "finished": "@:common.draw-random terminé !",
                 "ongoing": "@:common.draw-random en cours..."
