--- a/src/renderer/lang/generic/common.json
+++ b/src/renderer/lang/generic/common.json
@@ -8,6 +8,7 @@
                 "choose": "Choose",
                 "close": "Close",
                 "confirm": "I confirm",
+                "download": "Download",
                 "edit": "Edit",
                 "select": "Select",
                 "set": "Set {adjective}",
@@ -69,6 +70,7 @@
                 "choose": "Choisir",
                 "close": "Fermer",
                 "confirm": "Je confirme",
+                "download": "Télécharger",
                 "edit": "Modifier",
                 "select": "Sélectionner",
                 "set": "Rendre {adjective}",
