--- a/src/renderer/lang/generic/common.json
+++ b/src/renderer/lang/generic/common.json
@@ -10,6 +10,8 @@
                 "confirm": "I confirm",
                 "download": "Download",
                 "edit": "Edit",
+                "filter": "Filter",
+                "reset": "Reset",
                 "select": "Select",
                 "set": "Set {adjective}",
                 "step-back": "Back to previous step",
@@ -45,6 +47,7 @@
             "grade": "Grade",
             "license": "License",
             "name": "Name",
+            "oops": "Oops",
             "organizer": "Organizer",
             "place": "Place",
             "point": "Point",
@@ -72,6 +75,8 @@
                 "confirm": "Je confirme",
                 "download": "Télécharger",
                 "edit": "Modifier",
+                "filter": "Filter",
+                "reset": "Réinitialiser",
                 "select": "Sélectionner",
                 "set": "Rendre {adjective}",
                 "step-back": "Revenir à l'étape précédente",
@@ -107,6 +112,7 @@
             "grade": "Grade",
             "license": "Licence",
             "name": "Nom",
+            "oops": "Oops",
             "organizer": "Organisateur",
             "place": "Lieu",
             "point": "Point",
