--- a/src/renderer/lang/store/competition.json
+++ b/src/renderer/lang/store/competition.json
@@ -1,6 +1,11 @@
 {
     "gb": {
         "competition": { 
+            "success": {
+                "saved": "@:competition.success.was saved",
+                "updated": "@:competition.success.was updated",
+                "was": "The competition was well"
+            },
             "type": {
                 "individual": "Individual",
                 "team": "Team"
@@ -8,7 +13,30 @@
         }
     },
     "fr": {
-        "competition": { 
+        "competition": {
+            "error": {
+                "create": "@:competition.error.occured de la création de la @.lower:common.competition",
+                "delete-fighter": "@:competition.error.occured de la suppression du @.lower:common.fighter",
+                "delete-fighter-forbidden": "Vous n'avez pas le droit de supprimer les @.lower:common.fighters",
+                "delete-fighter-nonexistent": "@:competition.error.impossible procéder à la suppression d'un @.lower:common.fighter inexistant",
+                "duplicate-fighter": "@:competition.error.impossible sauvegarder, il y a des combattants en double",
+                "duplicate-team": "@:competition.error.duplicate-fighter ou des équipes en double",
+                "get": "@:competition.error.occured de la récupération des @.lower:common.competitions",
+                "impossible": "Impossible de",
+                "lock": "@:competition.error.occured du vérouillage de la @.lower:common.competition",
+                "occured": "Un problème est survenu lors",
+                "save-fighter": "@:competition.error.occured de la sauvegarde du @.lower:common.fighter",
+                "save-fighter-impossible": "@:competition.error.impossible procéder à la sauvegarde de ce @.lower:common.fighter. Aucune @.lower:common.competition n'est chargée",
+                "update": "@:competition.error.occured de la mise à jour de la @.lower:common.competition",
+                "update-fighter-forbidden": "Vous n'avez pas le droit de mettre à jour les @.lower:common.fighters",
+                "update-fighter-nonexistent": "@:competition.error.impossible procéder à l'édition d'un @.lower:common.fighter inexistant",
+                "update-mass": "@:competition.error.occured de la mise à jour en masse des {label}"
+            },
+            "success": {
+                "saved": "@:competition.success.was sauvegardée",
+                "updated": "@:competition.success.was mise à jour",
+                "was": "La @.lower:common.competition a bien été"
+            },
             "type": {
                 "individual": "Individuelle",
                 "team": "Équipe"
