UPDATE (translations) : database

--- a/src/renderer/lang/generic/common.json
+++ b/src/renderer/lang/generic/common.json
@@ -41,6 +41,7 @@
             "competition": "Competition",
             "competitions": "Competitions",
             "competition-formula": "Competition formula",
+            "configuration": "Configuration",
             "date": "Date",
             "date-birth": "Birthdate",
             "draw-random": "Random draw",
@@ -111,6 +112,7 @@
             "competition": "Compétition",
             "competitions": "Compétitions",
             "competition-formula": "Formule de compétition",
+            "configuration": "Configuration",
             "date": "Date",
             "date-birth": "Date de naissance",
             "draw-random": "Tirage au sort",
