REFACTOR (translations) : marking board translation key

--- a/src/renderer/lang/store/marking_board.json
+++ b/src/renderer/lang/store/marking_board.json
@@ -1,12 +1,12 @@
 {
     "gb": {
-        "marking-board": {
+        "markingBoard": {
             "red": "Red",
             "white": "White"
         }
     },
     "fr": {
-        "marking-board": {
+        "markingBoard": {
             "red": "Rouge",
             "white": "Blanc"
         }
